--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
-    "react": "16.8.3",
+    "react": "^16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.4.1",
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -24,7 +26,8 @@
     "jest": "24.9.0",
     "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "redux-devtools": "^3.5.0"
   },
   "jest": {
     "preset": "react-native"
